@startuml
left to right direction
skinparam shadowing false
skinparam linetype ortho

' MLD : transformation logique du MCD (img-mcd.png)
' - cles techniques id (uuid) en complement des identifiants metier du MCD
' - association PROGRESS resolue en table progress (user_id, module_id)

entity "users" as users {
  * id : uuid <<PK>>
  --
  email : text <<UNIQUE>>
  password : text
  role : user_role_enum
  created_at : timestamptz
  updated_at : timestamptz
}

entity "modules" as modules {
  * id : uuid <<PK>>
  --
  title : text <<UNIQUE>>
  short_description : text
  display_order : int <<UNIQUE>>
  publication_status : module_publication_status_enum
  learning_objective : text
  created_at : timestamptz
  updated_at : timestamptz
}

entity "resources" as resources {
  * id : uuid <<PK>>
  --
  module_id : uuid <<FK>>
  content : text
  resource_type : resource_type_enum
  display_order : int
  created_at : timestamptz
}

entity "progress" as progress {
  * user_id : uuid <<PK, FK>>
  * module_id : uuid <<PK, FK>>
  --
  status : progress_status_enum
  updated_at : timestamptz
}

users ||--o{ progress : user_id
modules ||--o{ progress : module_id
modules ||--o{ resources : module_id

@enduml
